[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ScreenBackgroundTextTemp.jpg" type="Texture" id=1]
[ext_resource path="res://src/TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/MusicUploadScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/songmenu.gd" type="Script" id=4]
[ext_resource path="res://src/visualizer.gd" type="Script" id=5]

[node name="SongMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TitleScreen" parent="." instance=ExtResource( 2 )]

[node name="MenuInterface" type="NinePatchRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -201.0
margin_bottom = 201.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -292.0
margin_top = -146.0
margin_right = 289.0
margin_bottom = 149.0

[node name="Label" type="Label" parent="MenuInterface/VBoxContainer"]
margin_right = 581.0
margin_bottom = 31.0
text = "Select a Song
(Preloaded Tracks Provided)"
align = 1

[node name="Song" type="HBoxContainer" parent="MenuInterface/VBoxContainer"]
margin_top = 35.0
margin_right = 581.0
margin_bottom = 67.0

[node name="PlaySong1" type="Button" parent="MenuInterface/VBoxContainer/Song"]
margin_right = 38.0
margin_bottom = 32.0
text = "Play"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuInterface/VBoxContainer/Song"]
margin_left = 42.0
margin_right = 297.0
margin_bottom = 32.0

[node name="Title" type="Label" parent="MenuInterface/VBoxContainer/Song/VBoxContainer"]
margin_right = 255.0
margin_bottom = 14.0
text = "Chill"

[node name="GenreTags" type="Label" parent="MenuInterface/VBoxContainer/Song/VBoxContainer"]
margin_top = 18.0
margin_right = 255.0
margin_bottom = 32.0
text = "Genre(s): Guitar, Instrumental, Acoustic"

[node name="Song2" type="HBoxContainer" parent="MenuInterface/VBoxContainer"]
margin_top = 71.0
margin_right = 581.0
margin_bottom = 103.0

[node name="PlaySong2" type="Button" parent="MenuInterface/VBoxContainer/Song2"]
margin_right = 38.0
margin_bottom = 32.0
text = "Play"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuInterface/VBoxContainer/Song2"]
margin_left = 42.0
margin_right = 259.0
margin_bottom = 32.0

[node name="Title" type="Label" parent="MenuInterface/VBoxContainer/Song2/VBoxContainer"]
margin_right = 217.0
margin_bottom = 14.0
text = "Dawn"

[node name="GenreTags" type="Label" parent="MenuInterface/VBoxContainer/Song2/VBoxContainer"]
margin_top = 18.0
margin_right = 217.0
margin_bottom = 32.0
text = "Genre(s): Piano, Modern, Ambient"

[node name="Song3" type="HBoxContainer" parent="MenuInterface/VBoxContainer"]
margin_top = 107.0
margin_right = 581.0
margin_bottom = 139.0

[node name="PlaySong3" type="Button" parent="MenuInterface/VBoxContainer/Song3"]
margin_right = 38.0
margin_bottom = 32.0
text = "Play"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuInterface/VBoxContainer/Song3"]
margin_left = 42.0
margin_right = 230.0
margin_bottom = 32.0

[node name="Title" type="Label" parent="MenuInterface/VBoxContainer/Song3/VBoxContainer"]
margin_right = 188.0
margin_bottom = 14.0
text = "Figaro"

[node name="GenreTags" type="Label" parent="MenuInterface/VBoxContainer/Song3/VBoxContainer"]
margin_top = 18.0
margin_right = 188.0
margin_bottom = 32.0
text = "Genre(s): Classical, Orchestra"

[node name="Song4" type="HBoxContainer" parent="MenuInterface/VBoxContainer"]
margin_top = 143.0
margin_right = 581.0
margin_bottom = 175.0

[node name="PlaySong4" type="Button" parent="MenuInterface/VBoxContainer/Song4"]
margin_right = 38.0
margin_bottom = 32.0
text = "Play"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuInterface/VBoxContainer/Song4"]
margin_left = 42.0
margin_right = 219.0
margin_bottom = 32.0

[node name="Title" type="Label" parent="MenuInterface/VBoxContainer/Song4/VBoxContainer"]
margin_right = 177.0
margin_bottom = 14.0
text = "J A Z Z"

[node name="GenreTags" type="Label" parent="MenuInterface/VBoxContainer/Song4/VBoxContainer"]
margin_top = 18.0
margin_right = 177.0
margin_bottom = 32.0
text = "Genre(s): Jazz, Instrumental"

[node name="Song5" type="HBoxContainer" parent="MenuInterface/VBoxContainer"]
margin_top = 179.0
margin_right = 581.0
margin_bottom = 211.0

[node name="PlaySong5" type="Button" parent="MenuInterface/VBoxContainer/Song5"]
margin_right = 38.0
margin_bottom = 32.0
text = "Play"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuInterface/VBoxContainer/Song5"]
margin_left = 42.0
margin_right = 274.0
margin_bottom = 32.0

[node name="Title" type="Label" parent="MenuInterface/VBoxContainer/Song5/VBoxContainer"]
margin_right = 232.0
margin_bottom = 14.0
text = "Lofi & Chill"

[node name="GenreTags" type="Label" parent="MenuInterface/VBoxContainer/Song5/VBoxContainer"]
margin_top = 18.0
margin_right = 232.0
margin_bottom = 32.0
text = "Genre(s): Lofi, Beats, HelpsYouStudy"

[node name="HBoxContainer" type="HBoxContainer" parent="MenuInterface"]
margin_left = 344.0
margin_top = 278.0
margin_right = 685.0
margin_bottom = 318.0
alignment = 1

[node name="MainMenu" type="Button" parent="MenuInterface/HBoxContainer"]
margin_left = 34.0
margin_right = 168.0
margin_bottom = 40.0
text = "Back to Main Menu"

[node name="Upload" type="Button" parent="MenuInterface/HBoxContainer"]
margin_left = 172.0
margin_right = 307.0
margin_bottom = 40.0
text = "Upload More Songs"

[node name="MusicUploadScreen" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = -0.488
anchor_top = -0.448
anchor_right = 1.496
anchor_bottom = 1.404
margin_left = 498.712
margin_top = 269.8
margin_right = -508.904
margin_bottom = -241.4
rect_min_size = Vector2( 1024, 600 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Node2D" type="Node2D" parent="AudioStreamPlayer"]
position = Vector2( 962, 537 )
script = ExtResource( 5 )

[connection signal="pressed" from="MenuInterface/VBoxContainer/Song/PlaySong1" to="." method="_on_PlaySong1_pressed"]
[connection signal="pressed" from="MenuInterface/VBoxContainer/Song2/PlaySong2" to="." method="_on_PlaySong2_pressed"]
[connection signal="pressed" from="MenuInterface/VBoxContainer/Song3/PlaySong3" to="." method="_on_PlaySong3_pressed"]
[connection signal="pressed" from="MenuInterface/VBoxContainer/Song4/PlaySong4" to="." method="_on_PlaySong4_pressed"]
[connection signal="pressed" from="MenuInterface/VBoxContainer/Song5/PlaySong5" to="." method="_on_PlaySong5_pressed"]
[connection signal="pressed" from="MenuInterface/HBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="MenuInterface/HBoxContainer/Upload" to="." method="_on_Upload_pressed"]
